# FundWise

./: .gitignore  AGENTS.md  Anchor.toml  BACKEND_FIXED.md  BUTTON_FUNCTIONALITY_FIX.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONFIG_FIX_SUMMARY.md  CONTEXT.md  Cargo.toml  DEBUG_GROUP_CREATION.md  DECISIONS.md  DEPLOYMENT.md  DIAGNOSTIC_GUIDE.md  FIXES_SUMMARY.md  FRONTEND_BACKEND_COMPLETE.md  FUNCTIONAL_SQUADS_IMPLEMENTATION.md  GROUP_CREATION_FIXED.md  HACKATHON_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  KALSHI_INTEGRATION.md  PAY_BUTTON_FIX.md  PRD.md  PRIVY_CONFIGURATION_GUIDE.md  PRIVY_SOLANA_SETUP.md  QUICK_FIX_REFERENCE.md  QUICK_START_TESTING.md  README.md  READY_TO_TEST.md  REBUILD_SUMMARY.md  ROADMAP.md  START_TESTING.md  STATUS.md  SUBMISSION.md  TESTING_GUIDE.md  VERIFICATION_COMPLETE.md  WALLET_ADAPTER_MIGRATION.md  WALLET_POPUP_READY.md  (+19 more)
.superstack/: competitive-landscape.html  idea-context.md  learnings.md
app/: globals.css  layout.tsx  page.tsx
brand-strata/: README.md
components/: agent-section.tsx  app-entry-button.tsx  avatar-admin.tsx  avatar-customizer.tsx  avatar.tsx  create-group-dialog.tsx  create-group-modal.tsx  create-proposal-modal.tsx  (+24 more)
programs/fundwise/: Cargo.toml  README.md
programs/fundwise/src/: accounts.rs  errors.rs  instructions.rs  lib.rs  state.rs
programs/fundwise/src/instructions/: add_expense.rs  create_group.rs  delete_expense.rs  join_group.rs  mod.rs  record_settlement.rs  settlement.rs  update_expense.rs
programs/fundwise/tests/: security.spec.ts
(+349 files in other folders)
